--- a/src/app/page-adminnotices/page-adminnotices.component.css
+++ b/src/app/page-adminnotices/page-adminnotices.component.css
@@ -12,3 +12,13 @@ mat-card-footer{
   padding-right: 10px;
 }
 
+.control-btns {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.memberBtn {
+  float: right;
+  width: 30px !important;
+}
