--- a/src/app/page-noticeboard/page-noticeboard.component.html
+++ b/src/app/page-noticeboard/page-noticeboard.component.html
@@ -3,8 +3,11 @@
 
   <div class="error-text" *ngIf="error">{{error}}</div>
   <mat-card *ngFor="let notice of notices">
-    <mat-card-content [innerHTML]="notice.text"></mat-card-content>
-    <mat-card-footer [innerHTML]="GetDate(notice.datetime).toLocaleDateString('cs-CZ')"></mat-card-footer>
+    <mat-card-header>
+      <mat-card-title>{{notice.head}}</mat-card-title>
+      <mat-card-subtitle>{{GetDate(notice.datetime).toLocaleDateString('cs-CZ')}}</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content style="margin-left: 16px;"><p>{{notice.text}}</p></mat-card-content>
   </mat-card>
 
 </div>
