--- a/src/app/page-adminnotices/page-adminnotices.component.html
+++ b/src/app/page-adminnotices/page-adminnotices.component.html
@@ -2,6 +2,15 @@
   <p class="hint-text">Aktuální informace ohledně tréninků, událostí a všeho co se v našich školách děje.</p>
 
   <div class="error-text" *ngIf="error">{{error}}</div>
+  <div class="control-pane">
+    <button mat-icon-button
+            style="float: right;width: 30px !important;"
+            (click)="dialogCreate()"
+            color="primary"
+            matTooltip="Nový">
+      <mat-icon>note_add</mat-icon>
+    </button>
+  </div>
   <mat-card *ngFor="let notice of notices">
     <mat-card-header>
       <mat-card-title>{{notice.head}}</mat-card-title>
@@ -25,13 +34,13 @@
         <button mat-icon-button
                 class="memberBtn"
                 color="primary"
-                (click)="dialogCreate(notice.id)"
+                (click)="dialogCreate()"
                 matTooltip="Vytvořit">
           <mat-icon>note_add</mat-icon>
         </button>
       </div>
     </mat-card-header>
-    <mat-card-content style="margin-left: 16px;"><p>{{notice.text}}</p></mat-card-content>
+    <mat-card-content style="margin-left: 16px;" [innerHTML]="notice.text"></mat-card-content>
   </mat-card>
 
 </div>
