--- a/src/app/page-noticeboard/page-noticeboard.component.html
+++ b/src/app/page-noticeboard/page-noticeboard.component.html
@@ -7,7 +7,7 @@
       <mat-card-title>{{notice.head}}</mat-card-title>
       <mat-card-subtitle>{{GetDate(notice.datetime).toLocaleDateString('cs-CZ')}}</mat-card-subtitle>
     </mat-card-header>
-    <mat-card-content style="margin-left: 16px;"><p>{{notice.text}}</p></mat-card-content>
+    <mat-card-content [innerHTML]="notice.text" style="margin-left: 16px;"></mat-card-content>
   </mat-card>
 
 </div>
