--- a/src/app/page-adminevents/page-adminevents.component.html
+++ b/src/app/page-adminevents/page-adminevents.component.html
@@ -164,6 +164,7 @@
               <div>
                 <quill-editor
                   id="quill"
+                  [modules]="modules"
                   [(ngModel)]="element.description"
                 ></quill-editor>
               </div>
