--- a/src/app/page-adminarticles/page-adminarticles.component.css
+++ b/src/app/page-adminarticles/page-adminarticles.component.css
@@ -73,6 +73,54 @@ mat-list-item {
 
 .pic-image {
   height: 162px;
+  overflow: hidden;
   object-fit: cover;
 }
 
+.mini-gallery {
+  width: 100%;
+  margin-top: 1rem;
+}
+
+.thumbnail {
+  width: 150px;
+  margin: 5px;
+  float: left;
+}
+
+.pickup-gallery div {
+  width: 150px;
+  height:90px;
+  margin: 5px;
+  float: left;
+}
+
+.pickup-gallery img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 5px;
+  opacity: .5;
+}
+
+.pickup-gallery img:hover {
+  opacity : 1;
+}
+
+.pickup-gallery {
+  max-width: 960px;
+  margin: auto;
+  margin-top: 1rem;
+  overflow: scroll;
+  border: 1px solid rgba(0,0,0,0.4);
+  border-radius: 5px;
+  transition: height .3s ease;
+}
+
+.pickup-gallery-extended {
+  height: 150px;
+}
+
+.pickup-gallery-colapsed {
+  height: 0px;
+}
