--- a/src/app/page-adminarticles/page-adminarticles.component.html
+++ b/src/app/page-adminarticles/page-adminarticles.component.html
@@ -1,10 +1,10 @@
 <div class="page-container">
   <div class="error-text" *ngIf="error">{{error}}</div>
 
-  <!--<mat-form-field>
+  <mat-form-field>
     <mat-label>Filter</mat-label>
     <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #filter>
-  </mat-form-field>-->
+  </mat-form-field>
   <mat-slide-toggle [(ngModel)]="this.history"
                     (change)="getArticles()"
                     style="margin-bottom: 10px;"
