--- a/src/app/page-adminarticles/page-adminarticles.component.html
+++ b/src/app/page-adminarticles/page-adminarticles.component.html
@@ -1,10 +1,10 @@
 <div class="page-container">
   <div class="error-text" *ngIf="error">{{error}}</div>
 
-  <mat-form-field>
+  <!--<mat-form-field>
     <mat-label>Filter</mat-label>
     <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #filter>
-  </mat-form-field>
+  </mat-form-field>-->
   <mat-slide-toggle [(ngModel)]="this.history"
                     (change)="getArticles()"
                     style="margin-bottom: 10px;"
@@ -77,7 +77,7 @@
                 color="primary"
                 (click)="dialogEdit(element)"
                 matTooltip="Upravit text">
-          <mat-icon>article</mat-icon>
+          <mat-icon>reorder</mat-icon>
         </button>
       </td>
     </ng-container>
@@ -149,7 +149,6 @@
               </ng-template>
 
               <!-- Pic editor -->
-              <p class="hint-text" style="margin-left: 20px;">Nahrávej pouze PNG formát obrázků.</p>
               <mat-card class="pic-editor">
                 <mat-card-subtitle>Úvodní foto</mat-card-subtitle>
                 <img class="pic-image" mat-card-image [src]="picPath">
@@ -186,7 +185,42 @@
                   </mat-card-actions>
                 </mat-card>
               </div>
+
+
+
             </mat-tab>
+            <!--
+            <mat-tab>
+              <div style="max-width: 960px; margin: auto; margin-top: 1rem;">
+                <button mat-raised-button
+                        color="primary"
+                        (click)="togglePickupGallery()">
+                  Galerie
+                </button>
+              </div>
+              <div class="pickup-gallery"
+                        [class.pickup-gallery-colapsed]="!showPG"
+                        [class.pickup-gallery-extended]="showPG">
+                <div *ngFor="let img of images"><img (dblclick)="addImg(element, img)" [src]="'..'+img.url" /></div>
+              </div>
+
+
+              <ng-template mat-tab-label>
+                <mat-icon>edit</mat-icon>
+              </ng-template>
+
+              <br>
+              <div class="editor">
+                <quill-editor
+                  id="quill"
+                  style="min-height: 600px;"
+                  [modules]="modules"
+                  [(ngModel)]="element.text"
+                  (onEditorCreated)="onEditorCreated($event)"
+                ></quill-editor>
+              </div>
+
+            </mat-tab>-->
             <mat-tab>
               <!-- Preview -->
               <ng-template mat-tab-label>
@@ -207,7 +241,7 @@
           <button mat-raised-button
                   class="bottomButton top-space"
                   color="primary"
-                  (click)="updateArticle(element, true)">
+                  (click)="updateArticle(element)">
             Uložit
           </button>
 
