--- a/src/app/page-adminmembers/page-adminmembers.component.html
+++ b/src/app/page-adminmembers/page-adminmembers.component.html
@@ -1,50 +1,71 @@
 <div class="page-container">
+  <mat-tab-group>
+    <mat-tab>
+      <ng-template mat-tab-label>
+        <mat-icon>person_add</mat-icon>
+      </ng-template>
+      <br>
+      <div class="member-form">
+        <mat-form-field appearance="outline">
+          <mat-label>Jméno</mat-label>
+          <input (keyup)="emptyFieldsCheck()" matInput [(ngModel)]="member.name">
+        </mat-form-field>
 
-  <div class="member-form">
-    <mat-form-field appearance="outline">
-      <mat-label>Jméno</mat-label>
-      <input matInput [(ngModel)]="member.name">
-    </mat-form-field>
+        <mat-form-field appearance="outline">
+          <mat-label>Příjmení</mat-label>
+          <input (keyup)="emptyFieldsCheck()" matInput [(ngModel)]="member.surname">
+        </mat-form-field>
 
-    <mat-form-field appearance="outline">
-      <mat-label>Příjmení</mat-label>
-      <input matInput [(ngModel)]="member.surname">
-    </mat-form-field>
+        <mat-form-field appearance="outline">
+          <mat-label>Login</mat-label>
+          <input (keyup)="emptyFieldsCheck()" matInput [(ngModel)]="member.login">
+        </mat-form-field>
 
-    <mat-form-field appearance="outline">
-      <mat-label>Login</mat-label>
-      <input matInput [(ngModel)]="member.login">
-    </mat-form-field>
+        <mat-form-field appearance="outline">
+          <mat-label>Heslo</mat-label>
+          <input (keyup)="emptyFieldsCheck()" matInput [(ngModel)]="member.pwd">
+        </mat-form-field>
 
-    <mat-form-field appearance="outline">
-      <mat-label>Heslo</mat-label>
-      <input matInput [(ngModel)]="member.pwd">
-    </mat-form-field>
+        <!-- School editor -->
+        <mat-form-field appearance="outline">
+          <mat-label>Škola</mat-label>
+          <mat-select [(value)]="member.school">
+            <mat-option value="0">Všechny</mat-option>
+            <mat-option value="1">Ostrava</mat-option>
+            <mat-option value="2">Třinec</mat-option>
+            <mat-option value="3">Český Těšín</mat-option>
+          </mat-select>
+        </mat-form-field>
 
-    <!-- School editor -->
-    <mat-form-field appearance="outline">
-      <mat-label>Škola</mat-label>
-      <mat-select [(value)]="member.school">
-        <mat-option value="0">Všechny</mat-option>
-        <mat-option value="1">Ostrava</mat-option>
-        <mat-option value="2">Třinec</mat-option>
-        <mat-option value="3">Český Těšín</mat-option>
-      </mat-select>
-    </mat-form-field>
-    <br>
-    <!-- Buttons area -->
+        <mat-form-field appearance="outline">
+          <mat-label>Email(volitelné)</mat-label>
+          <input (keyup)="emptyFieldsCheck()" matInput [(ngModel)]="email">
+          <mat-hint>Pro odeslání přihlašovacích údajů.</mat-hint>
+        </mat-form-field>
+        <br>
+        <!-- Buttons area -->
 
-    <button mat-raised-button
-            class="bottomButton"
-            color="primary"
-            (click)="addMember()">
-      Uložit
-    </button>
-    <button mat-raised-button
-            class="bottomButton"
-            color="basic"
-            (click)="initMember()">
-      Zrušit
-    </button>
-  </div>
+        <button mat-raised-button
+                class="bottomButton"
+                color="primary"
+                [disabled]="!saveEnable"
+                (click)="addMember()">
+          {{saveBtnText}}
+        </button>
+        <button mat-raised-button
+                class="bottomButton"
+                color="basic"
+                (click)="initMember()">
+          Zrušit
+        </button>
+      </div>
+    </mat-tab>
+    <mat-tab>
+      <ng-template mat-tab-label>
+        <mat-icon>groups</mat-icon>
+      </ng-template>
+    </mat-tab>
+  </mat-tab-group>
+
 </div>
+
