--- a/src/app/dialog-newnotice/dialog-newnotice.component.html
+++ b/src/app/dialog-newnotice/dialog-newnotice.component.html
@@ -12,6 +12,7 @@
       <mat-option value="1">Ostrava</mat-option>
       <mat-option value="2">Třinec</mat-option>
       <mat-option value="3">Český Těšín</mat-option>
+      <mat-option value="4">Těrlicko</mat-option>
     </mat-select>
   </mat-form-field>
   <br>
